# quickinvoice

./: .gitignore  README.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2025-01-01-012914_create_user/: up.sql
backend/migrations/2025-01-02-120349_create_models_webhook_invoic/: up.sql
backend/migrations/2025-01-02-120515_create_invoices/: up.sql
backend/src/: config.rs  db.rs  main.rs  schema.rs
backend/src/auth/: errors.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  service.rs
backend/src/handlers/: hello.rs  mod.rs  webhook.rs
backend/src/models/: invoice.rs  mod.rs  user.rs  webhook.rs
frontend/: app.config.ts  bun.lockb  package.json  tsconfig.json
frontend/app/: routeTree.gen.ts  router.tsx
frontend/app/components/: sidebar.tsx
frontend/app/components/chart/: invoice-stats.tsx  table.tsx
frontend/app/components/header/: header.tsx
frontend/app/components/sidebar/: sidebar-content.tsx  sidebar-footer.tsx  sidebar-header.tsx  sidebar.tsx
frontend/app/components/ui/: dropdown-menu.tsx
frontend/app/lib/: sidebar-list.ts
frontend/app/routes/: __root.tsx  about.tsx  app.tsx  index.tsx
frontend/app/routes/app/: account.tsx  index.tsx
